// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Admin should create client [Mutation] 1`] = `
Object {
  "domain": null,
  "name": "TestClient",
}
`;

exports[`Client Admin should return all clients [Query] 1`] = `
Object {
  "clients": Array [
    Object {
      "domain": Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
      "id": "5373ca535c2dbc81fbe1d239d84eeb27b9f695578e3268f9c208da8aa33cdeba",
      "name": "Forum Fernseher",
      "owners": Array [
        Object {
          "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
        },
      ],
    },
    Object {
      "domain": Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
      "id": "25098855d11587e9e64775846a4d483cd4251503b11dc9b616ea37fb83511f1c",
      "name": "Forum Tablet",
      "owners": null,
    },
    Object {
      "domain": Object {
        "id": "624497235d090cf74bd2473155d6d65fb9f9395ec018192d181387e20f4cbf10",
      },
      "id": "ced700fbf3e7c6454b92e1dd80454973156070f780142b7e236f3cb91172aa3c",
      "name": "Mensa Kiosk",
      "owners": null,
    },
    Object {
      "domain": Object {
        "id": "624497235d090cf74bd2473155d6d65fb9f9395ec018192d181387e20f4cbf10",
      },
      "id": "92357cc7f1024deec8c76803b207232978f94595a18df2a0ff8e3653b392e9f7",
      "name": "Mensa Tablet",
      "owners": Array [
        Object {
          "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
        },
      ],
    },
  ],
}
`;

exports[`Client Admin should return client not owned by User [Query] 1`] = `
Object {
  "client": Object {
    "domain": Object {
      "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
    },
    "id": "25098855d11587e9e64775846a4d483cd4251503b11dc9b616ea37fb83511f1c",
    "name": "Forum Tablet",
    "owners": null,
  },
}
`;

exports[`Client Admin should return client owned by User [Query] 1`] = `
Object {
  "client": Object {
    "domain": Object {
      "id": "624497235d090cf74bd2473155d6d65fb9f9395ec018192d181387e20f4cbf10",
    },
    "id": "92357cc7f1024deec8c76803b207232978f94595a18df2a0ff8e3653b392e9f7",
    "name": "Mensa Tablet",
    "owners": Array [
      Object {
        "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
      },
    ],
  },
}
`;

exports[`Client Admin should set owner of client not owned by User [Mutation] 1`] = `
Object {
  "setClientOwner": Object {
    "client": Object {
      "owners": Array [
        Object {
          "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
        },
      ],
    },
  },
}
`;

exports[`Client Admin should set owner of client owned by User [Mutation] 1`] = `
Object {
  "setClientOwner": Object {
    "client": Object {
      "owners": Array [
        Object {
          "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
        },
        Object {
          "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
        },
      ],
    },
  },
}
`;

exports[`Client Admin should update client not owned by User [Mutation] 1`] = `
Object {
  "updateClient": Object {
    "client": Object {
      "domain": Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
      "id": "25098855d11587e9e64775846a4d483cd4251503b11dc9b616ea37fb83511f1c",
      "name": "RenamedTestClient",
      "owners": null,
    },
  },
}
`;

exports[`Client Admin should update client owned by User [Mutation] 1`] = `
Object {
  "updateClient": Object {
    "client": Object {
      "domain": Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
      "id": "92357cc7f1024deec8c76803b207232978f94595a18df2a0ff8e3653b392e9f7",
      "name": "RenamedTestClient",
      "owners": Array [
        Object {
          "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
        },
      ],
    },
  },
}
`;

exports[`Client Anonym should create a Client [Mutation] 1`] = `
Object {
  "domain": null,
  "name": "TestClient",
}
`;

exports[`Client User should create client [Mutation] 1`] = `
Object {
  "domain": null,
  "name": "TestClient",
}
`;

exports[`Client User should return all clients [Query] 1`] = `
Object {
  "clients": Array [
    Object {
      "domain": Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
      "id": "5373ca535c2dbc81fbe1d239d84eeb27b9f695578e3268f9c208da8aa33cdeba",
      "name": "Forum Fernseher",
      "owners": Array [
        Object {
          "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
        },
      ],
    },
  ],
}
`;

exports[`Client User should return client owned by User [Query] 1`] = `
Object {
  "client": Object {
    "domain": Object {
      "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
    },
    "id": "5373ca535c2dbc81fbe1d239d84eeb27b9f695578e3268f9c208da8aa33cdeba",
    "name": "Forum Fernseher",
    "owners": Array [
      Object {
        "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
      },
    ],
  },
}
`;

exports[`Client User should set owner of client owned by User [Mutation] 1`] = `
Object {
  "setClientOwner": Object {
    "client": Object {
      "owners": Array [
        Object {
          "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
        },
      ],
    },
  },
}
`;

exports[`Client User should update client owned by User [Mutation] 1`] = `
Object {
  "updateClient": Object {
    "client": Object {
      "domain": Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
      "id": "5373ca535c2dbc81fbe1d239d84eeb27b9f695578e3268f9c208da8aa33cdeba",
      "name": "RenamedTestClient",
      "owners": Array [
        Object {
          "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
        },
      ],
    },
  },
}
`;
